--- a/index.htm
+++ b/index.htm
@@ -106,7 +106,7 @@
     <header>
         <h1>AlvaroApi</h1>
     </header>
-    <input type="text" id="input" placeholder="Buscar por nombre..." class="buscadorcito">
+    <input type="text" id="input" placeholder="Buscar por nombre..." class="buscadorcito" oninput="CargarPersonajes()">
 <button onclick="CargarPersonajes()" class="buscaa">Buscar</button>
     <div class="contenido"></div>
     <div class="contenido">
